# Hackaton-PLM

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
reports/: analysis_report.md
src/: __init__.py  event_log_generator.py  operations.py  process_analyzer.py  report_generator.py  visualizer.py
